# global_defs

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md
examples/: global_defs_ex.cc
include/global_defs/: global_defs.h
